SET(EXECUTABLE_OUTPUT_PATH "")

SUBDIRS(level_0 level_1)

IF(AVD_UNIT_TESTS)
  INCLUDE_DIRECTORIES(
    ${ALL_INC_DIRS}
    ${THIRDPARTY_SRC_DIR}/yaktest
  )
  LINK_DIRECTORIES(
    ${ALL_LIB_DIRS}
    ${THIRDPARTY_BLD_DIR}/yaktest
  )
  SET(TESTSUITES
    4stack_head.t
    analyze.t
    analyze_command.t
    analyze_command_def.t
    analyze_command_def_base.t
    analyze_flow_command.t
    analyze_flow_command_def.t
    analyze_function.t
    analyze_genotype.t
    analyze_util.t
    avida.t
    avida_driver_analyze.t
    avida_driver_base.t
    avida_driver_population.t
    avida_triggers.t
    birth_chamber.t
    block_struct.t
    callback_util.t
    config.t
    const_schedule.t
    cpu_head.t
    cpu_memory.t
    cpu_stack.t
    cpu_test_info.t
    data_entry.t
    data_file.t
    data_file_manager.t
    data_manager_base.t
    default_message_display.t
    environment.t
    event.t
    event_factory.t
    event_factory_manager.t
    event_list.t
    event_list_entry.t
    event_list_iterator.t
    file.t
    fitness_matrix.t
    fixed_coords.t
    functions.t
    genebank.t
    genesis.t
    genome.t
    genome_util.t
    genotype.t
    genotype_batch.t
    genotype_birth_data.t
    genotype_control.t
    hardware_4stack.t
    hardware_4stack_thread.t
    hardware_base.t
    hardware_cpu.t
    hardware_cpu_thread.t
    hardware_factory.t
    hardware_util.t
    help_alias.t
    help_entry.t
    help_full_entry.t
    help_manager.t
    help_type.t
    histogram.t
    indexed_block_struct.t
    init_file.t
    inject_genebank.t
    inject_genotype.t
    inject_genotype_birth_data.t
    inject_genotype_control.t
    inject_genotype_element.t
    inject_genotype_queue.t
    inst_lib_base.t
    inst_set.t
    inst_util.t
    integrated_schedule.t
    integrated_schedule_node.t
    landscape.t
    lineage.t
    lineage_control.t
    local_mutations.t
    message_class.t
    message_closure.t
    message_display.t
    message_type.t
    mutation.t
    mutation_lib.t
    mutation_rates.t
    mx_code_array.t
    my_code_array_less_than.t
    org_message.t
    organism.t
    phenotype.t
    population.t
    population_cell.t
    population_event.t
    population_event_factory.t
    population_interface.t
    prob_schedule.t
    random.t
    reaction.t
    reaction_lib.t
    reaction_process.t
    reaction_result.t
    ref_block.t
    resource.t
    resource_count.t
    resource_lib.t
    running_average.t
    scaled_block.t
    schedule.t
    spatial_count_elem.t
    spatial_res_count.t
    species.t
    species_control.t
    species_queue.t
    stats.t
    string.t
    string_iterator.t
    string_list.t
    string_util.t
    tArgDataEntry.t
    tArray.t
    tBuffer.t
    tDataEntry.t
    tDataEntryBase.t
    tDataEntryCommand.t
    tDataManager.t
    tDictionary.t
    tList.t
    tMatrix.t
    tVector.t
    task_entry.t
    task_lib.t
    test_cpu.t
    test_util.t
    tools.t
    uint.t
    weighted_index.t
  ) 
  FOREACH(TESTSUITE ${TESTSUITES})
    ADD_EXECUTABLE(${TESTSUITE} ${TESTSUITE}.cc)
    TARGET_LINK_LIBRARIES(${TESTSUITE}
      main
      cpu
      event
      main
      tools
      yaktest
    )
    ADD_TEST(${TESTSUITE} ${TESTSUITE})
  ENDFOREACH(TESTSUITE)
ENDIF(AVD_UNIT_TESTS)
