INCLUDE_DIRECTORIES(${ALL_INC_DIRS})

IF(AVD_TASK_EVENT_GEN)
  ADD_EXECUTABLE(task_event_gen task_event_gen.cc)
  SET(task_event_gen_link_libraries tools)
  IF(AVD_SERIALIZATION)
    SET(task_event_gen_link_libraries ${task_event_gen_link_libraries} archive boost_serialization)
  ENDIF(AVD_SERIALIZATION)
  TARGET_LINK_LIBRARIES(task_event_gen ${task_event_gen_link_libraries})
  LINK_DIRECTORIES(${ALL_LIB_DIRS})
  INSTALL_TARGETS(/work task_event_gen)
ENDIF(AVD_TASK_EVENT_GEN)
